# pynm

./: .gitignore  LICENSE  README.md  build.bat  build.sh  pynm.spec  pyproject.toml
.github/workflows/: build-wheel.yml
pynm/: __main__.py  cli.py  reader.py  symbols.py
tests/: conftest.py  test_cli.py  test_go_versions.py  test_integration.py  test_reader.py  test_symbols.py
tests/go_binaries/: hello_1.18.1_dynamic_linux_amd64  hello_1.18.1_dynamic_linux_arm64  hello_1.18.1_static_sym_linux_amd64  hello_1.18.1_static_sym_linux_arm64  hello_1.18.1_stripped_linux_amd64  hello_1.18.1_stripped_linux_arm64
